# ha-untis-archive

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: release.yml
custom_components/untis_archive/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  storage.py
custom_components/untis_archive/translations/: de.json  en.json
dashboards/: schul-cockpit.yaml
docs/: dashboard.md  data-access.md  handover.md  installation.md
schul_cockpit/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
schul_cockpit/backend/: audit.py  auth.py  backup.py  config.py  courses.py  db.py  erlass.py  exams.py  grades.py  history_schema.py  main.py  pin_auth.py  queries.py  reconcile.py  requirements.txt  supervisor_client.py  sync_worker.py  webapp_schema.sql  webclip.py  webpush_setup.py
schul_cockpit/backend/routers/: absences.py  afternoon.py  audit.py  auth_router.py  backup.py  checkins.py  courses.py  dashboard.py  exams.py  health.py  kiosk.py  me.py  notify.py  oral.py  plan.py  push.py  search.py  settings_router.py  setup.py  subjects.py  tasks.py  today.py  week.py
schul_cockpit/frontend/: index.html  package-lock.json  package.json  vite.config.js
schul_cockpit/frontend/public/: manifest.webmanifest  sw.js
schul_cockpit/frontend/src/: App.svelte  main.js  style.css
schul_cockpit/frontend/src/lib/: HeaderChips.svelte  LessonCard.svelte  api.js  (+6 more)
scripts/: api_probe.py  backfill.py
tests/: test_storage_concurrent.py
(+15 files in other folders)
